--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,99 @@
-/* цвет основного текста */
-color: #212121;
+:root {
+    --main-font: "Roboto", sans-serif;
+    --secondary-font: Raleway, sans-serif;
+    --accent-color: #2196F3;
+}
 
-/* вторичный цвет текста */
-color: #757575;
+body {
+    font-family: var(--main-font);
+    font-style: normal;
+}
 
-/* акцент #2196F3*/
-color: #2196F3;
+.list {
+   list-style: none; 
+}
 
+.link {
+    text-decoration: none;
+}
+
+.address {
+    
+}
+
+.logo {
+    font-family: var(--secondary-font)
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.192;
+    letter-spacing: 0.03em;
+    color: #2196F3;
+}
+.logo-dark-theme {
+    color: #000;
+}
+
+.navigation-list-link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.143;
+    letter-spacing: 0.02em;
+}
+
+.navigation-list-link:hover,
+.navigation-list-link:focus,
+.header-contacts-link:hover,
+.header-contacts-link:focus {
+    color: var(--accent-color);
+}
+
+.hero {
+    font-size: 44px;
+    line-height: 1.364;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    background: #2F303A;
+}
+
+.model-btn { 
+    font-family: var(--main-font);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.875;
+    letter-spacing: 0.06em;
+
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    color: #FFFFFF;
+    background: var(--accent-color); 
+}
+
+.features-subtitle {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.143;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #212121;
+}
+
+.features-text {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.714;
+    letter-spacing: 0.03em;
+    color: #757575;
+}
+
+.title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.167;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121; 
+}
