--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,15 @@
 :root {
     --main-font: "Roboto", sans-serif;
-    --secondary-font: Raleway, sans-serif;
+    --secondary-font: "Raleway", sans-serif;
+    --main-text-color: #757575;
+    --the-text-color-of-subtitle: #212121;
     --accent-color: #2196F3;
+    --footer-color-item:  rgba(255, 255, 255, 0.6);
+    --footer-color-item-address: #fff;
+    --background-footer: #2F303A;
+    --background-section: #F5F4FA;
+    --logo-text-footer: #fff;
+    --logo-text-header: #000
 }
 
 body {
@@ -18,19 +26,20 @@ body {
 }
 
 .address {
-    
+    font-style: normal;
 }
 
 .logo {
-    font-family: var(--secondary-font)
+    font-family: var(--secondary-font);
     font-weight: 700;
     font-size: 26px;
     line-height: 1.192;
     letter-spacing: 0.03em;
-    color: #2196F3;
+    color: var(--accent-color);
 }
-.logo-dark-theme {
-    color: #000;
+
+.logo-text-header {
+    color: var(--logo-text-header);
 }
 
 .navigation-list-link {
@@ -54,7 +63,7 @@ body {
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: #FFFFFF;
-    background: #2F303A;
+    background: var(--background-footer);
 }
 
 .model-btn { 
@@ -78,7 +87,7 @@ body {
     line-height: 1.143;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #212121;
+    color: var(--the-text-color-of-subtitle);
 }
 
 .features-text {
@@ -86,14 +95,80 @@ body {
     font-size: 14px;
     line-height: 1.714;
     letter-spacing: 0.03em;
-    color: #757575;
+    color: var(--main-text-color);
 }
 
 .title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.167;
-    text-align: center;
     letter-spacing: 0.03em;
-    color: #212121; 
+    color: var(--the-text-color-of-subtitle); 
+}
+
+.team {
+    background: var(--background-section);
+}
+
+.team-subtitle {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.188;
+    letter-spacing: 0.03em;
+    color: var(--the-text-color-of-subtitle);
+}
+
+.team-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.188;
+    letter-spacing: 0.03em;
+    color: var(--main-text-color);
+}
+
+.footer-list {
+    background: var(--background-footer);
+}
+
+.logo-white {
+    color: var(--logo-text-footer);
+}
+
+.footer-contacts {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+}
+
+.footer-item {
+    color: var(--footer-color-item);
+}
+
+.footer-item-address{
+    color: var(--footer-color-item-address);
+}
+
+.gallery-portfolio-list {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.625;
+    letter-spacing: 0.03em;
+    color: var(--the-text-color-of-subtitle);
+}
+
+.gallery-portfolio-subtitle {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    color: var(--the-text-color-of-subtitle);
+}
+
+.gallery-portfolio-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.875;
+    letter-spacing: 0.03em;
+    color: var(--main-text-color);
 }
